--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
     "path": "^0.12.7"
