--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^2.0.0",
     "path": "^0.12.7"
   }
 }
